# installreq

./: README.md  main.py  pyproject.toml  setup.py  top100.json
installreq/: README.md  __init__.py  installreq.py  setup.py
